--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
   http: ^1.0.0
+  image_picker: ^0.8.9
   intl: ^0.17.0
   page_transition: ^2.0.9
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
