--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,18 @@ dependencies:
   intl: ^0.17.0
   page_transition: ^2.0.9
   cached_network_image: ^3.2.3
+  another_flushbar: ^1.12.30  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
